# Lash

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.rst  RELEASE_NOTES.md  RUNNING.md  ReadMePypi.rst  Release-notes.md  Release-notes.rst  __init__.py  app_math.py  file_handler.py  logger.py  pyproject.toml  setup.cfg  setup.py
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  tests-maker.md
.github/workflows/: python-package.yml  python-publish.yml
Exportables/: ikeyboard.py  lkeyboard.py
ExtraTools/: __init__.py  bonus.py  logger.py  sched_manager.py
ExtraTools/Devices/: keyboard.py  tmouse.py
docs/superpowers/plans/: 2026-05-07-lazy-loading-and-plugin-system.md
lash/: __init__.py  __main__.py  app_math.py  audio_handler.py  executor.py  file_handler.py  image_handler.py  spy.py  video_handler.py  webTools.py  web_scraping.py
lash/Exportables/: __init__.py  config.py  exportable_math.py  fileTools.py  ikeyboard.py  imageTools.py  spyTools.py  videoTools.py  webTools.py  ytbTools.py
lash/ExtraTools/: __init__.py  app_math.py  app_random.py  bonus.py  brute_force.py  logger.py  monitor.py  sched_manager.py  spy.py  system_monitor.py  work.py  youtube.py
lash/ExtraTools/Devices/: keyboard.py  tmouse.py
lash/core/: downloader.py  lazy_group.py  plugin_group.py  plugin_list.py  plugin_manager.py  remover.py
lash/data/: cache.json  work.csv
lash/plugins/: __init__.py
lash/plugins/audio/: cli.py  core.py  helpers.py  manifest.json
lash/plugins/audio_tools/: manifest.json
lash/plugins/calc/: cli.py  core.py  helpers.py  manifest.json
lash/plugins/calc_tools/: manifest.json
lash/plugins/crack/: cli.py  core.py  helpers.py  manifest.json
lash/plugins/crack_tools/: manifest.json
lash/plugins/device/: cli.py  core.py  helpers.py  manifest.json
lash/plugins/device_tools/: manifest.json
lash/plugins/file/: cli.py  core.py  (+1 more)
tests/: test_downloader.py  test_lazy_group.py  test_plugin_list.py  test_plugin_registry.py  test_remover.py
tests/core/: test_downloader.py  test_fixer.py  test_lazy_group.py  test_plugin_list.py  test_plugin_registry.py  test_remover.py
(+69 files in other folders)
